tests/syntax_tests/data/parsing/errors/expressions/for_of_pattern.res
let arr = [1, 2, 3]

for (item, index) of arr {
  ignore((item, index))
}
